fix overflow bug in tabs

--- a/open-budget/app/styles/main.less
+++ b/open-budget/app/styles/main.less
@@ -2247,20 +2247,20 @@ svg rect{
   .tab-label:hover {
     background-color: #efefef;
   }
-  
+
   .tab-label.selected {
     background-color: grey;
   }
 
 #tabs-content-container {
   width: 100%;
-  overflow: auto;
+  // overflow: auto;
 }
 
   .tab-content {
     display: none;
   }
-  
+
   .node {
     border: solid 1px white;
     font: 10px sans-serif;
@@ -2269,7 +2269,7 @@ svg rect{
     position: absolute;
     text-indent: 2px;
   }
-  
+
 #bubble-chart-container {
   position: relative;
 }
@@ -2278,12 +2278,12 @@ svg rect{
     text-align: center;
     pointer-events: none; // in order to allow hover event to fire under the label
   }
-  
+
     .bubble-group-label-child {
       position: relative;
       left: -50%;
     }
-    
+
     .bubble-group-label-total-sum {
       font-weight: bold;
     }
